fix: banner overflow

--- a/challenge_2/src/components/Hero/style.css
+++ b/challenge_2/src/components/Hero/style.css
@@ -1,4 +1,5 @@
 .hero {
   object-fit: cover;
   height: 378px;
+  width: 100%;
 }
